--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <P>Passward</P>
             <input type="password" name="" placrholder=" " placeholder="Enter Password">
             <input type="submit" name="" value="Login">
-            <a class="links" href="#"> Forgot Passward</a>
+            <a class="links" href="#"> Forgot Password</a>
             <a class="links" href="#"> Create Account</a>
         </form>
 
