--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <form>
             <p>Username</p>
             <input type="text" name="" placeholder="Enter Username">
-            <P>Passward</P>
+            <P>Password</P>
             <input type="password" name="" placrholder=" " placeholder="Enter Password">
             <input type="submit" name="" value="Login">
             <a class="links" href="#"> Forgot Password</a>
